log
Wed 27 Sep 2023 01:50:53 AM UTC: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:27: error: ‘heapElement’ undeclared (first use in this function); did you mean ‘heapElem’?
   43 |   nuevoHeap->heapArray = (heapElement*) malloc (nuevoHeap->capac * sizeof(heapElement));
      |                           ^~~~~~~~~~~
      |                           heapElem
heap.c:43:27: note: each undeclared identifier is reported only once for each function it appears in
heap.c:43:39: error: expected expression before ‘)’ token
   43 |   nuevoHeap->heapArray = (heapElement*) malloc (nuevoHeap->capac * sizeof(heapElement));
      |                                       ^
Compilation failed
eaf4167
Wed 27 Sep 2023 01:51:29 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:55: error: ‘*nuevoHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   43 |   nuevoHeap->heapArray = (heapElem*) malloc (nuevoHeap->capac * sizeof(heapElem));
      |                                              ~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
49334f7
Wed 27 Sep 2023 01:52:29 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
e3d865c
Wed 27 Sep 2023 01:55:31 AM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
a726d39
Wed 27 Sep 2023 01:58:12 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6288324
Wed 27 Sep 2023 02:09:20 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
37cf37f
Wed 27 Sep 2023 02:09:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
36abce7
Wed 27 Sep 2023 02:10:42 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
592479b
Wed 27 Sep 2023 02:22:37 AM UTC: 
 heap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
1437ee1
Wed 27 Sep 2023 02:28:42 AM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:49:56: error: ‘indicePadre’ undeclared (first use in this function)
   49 |     if (pq->heapArray[indice].priority < pq->heapArray[indicePadre].priority)
      |                                                        ^~~~~~~~~~~
heap.c:49:56: note: each undeclared identifier is reported only once for each function it appears in
heap.c:52:20: error: array subscript is not an integer
   52 |       pq->heapArray[index] = pq->heapArray[indicePadre];
      |                    ^
Compilation failed
b2295c6
Wed 27 Sep 2023 02:29:12 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:53:20: error: array subscript is not an integer
   53 |       pq->heapArray[index] = pq->heapArray[indicePadre];
      |                    ^
Compilation failed
631198e
Wed 27 Sep 2023 02:29:32 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
3db0187
Wed 27 Sep 2023 02:34:51 AM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:22: error: expected expression before ‘)’ token
   42 |     pq->heapArray = () realloc (pq->heapArray, pq->capac * sizeof());
      |                      ^
Compilation failed
e7a711e
Wed 27 Sep 2023 02:36:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:5: error: conversion to non-scalar type requested
   42 |     pq->heapArray = (heapElem) realloc (pq->heapArray, pq->capac * sizeof(heapElem));
      |     ^~
Compilation failed
d4699ab
